# awscm

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  awscm-ascii.txt  setup.cfg
.github/workflows/: python-app.yml  python-publish.yml
src/: tweeter.py  utils.py
src/awscm/: __init__.py  awstools.py  glue_tools.py  gluetools.py  tweeter.py
src/tests/: conftest.py  test_awstools.py
src/tests/test_data/: config  credentials
