[metadata]
#package name
name = awscm        
version = 0.3-alpha
author = shubhsboson
author_email = contact@shubhsboson.com
description = a module for easy monitoring of aws jobs and services.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shubhsboson/awscm
project_urls =
    Bug Tracker = https://github.com/shubhsboson/awscm/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = aws , glue , lambda 
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    boto3
    logger
    requests-oauthlib
[options.packages.find]
where = src
[options.extras_require]
dev =   
    twine    
# twine - needed for pushing the package to pypi